fix margin on mobile

--- a/src/pages/landing-page/landing-search/landing-search.styles.scss
+++ b/src/pages/landing-page/landing-search/landing-search.styles.scss
@@ -29,6 +29,7 @@
       justify-content: center;
       width: 100%;
       margin: 20px 0;
+      margin-left: -8px;
       i.search-icon {
         position: relative;
         left: 7%;
@@ -87,12 +88,10 @@
 @media (max-width: 770px) {
   .main {
     .content {
-      margin-top: 40px;
       h1.title {
         font-size: 45px;
       }
       .searchbar-container {
-        margin-left: -8px;
         i.search-icon {
           position: relative;
           left: 10%;
